--- a/Web-app/aichatbot/.gitignore
+++ b/Web-app/aichatbot/.gitignore
@@ -4,15 +4,13 @@
 /node_modules
 /.pnp
 .pnp.js
+.firebase
 
 # testing
 /coverage
 
 # production
 /build
-
-# environment variables
-/.env
 
 # misc
 .DS_Store
